# StereoMatch

./: .gitignore  CMakeLists.txt  StereoMatching.cpp  StereoMatching.h  main.cpp  progress.h  progress_display.h
dataset/: 3.pgm  4.pgm  disp2pfm
